# InterfaceMonitor

./: CMakeLists.txt  README.md  readme.txt
SRC/: CMakeLists.txt
SRC/InterfaceManager/: AbstractInterfaceManagerImpl.cpp  AbstractInterfaceManagerImpl.h  CMakeLists.txt  InterfaceManager.cpp  InterfaceManager.h  InterfaceManagerImplLinux.cpp  InterfaceManagerImplLinux.h
SRC/InterfaceMonitor/: CMakeLists.txt  InterfaceMonitor.cpp  InterfaceMonitor.h  main.cpp
SRC/Tests/: CMakeLists.txt  Tests.cpp
